--- a/bubble-persistence/pom.xml
+++ b/bubble-persistence/pom.xml
@@ -57,6 +57,10 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+		</dependency>
 	</dependencies>
 	<url>https://github.com/bubble-light/bubble/tree/master/bubble-persistence</url>
 </project>
