--- a/bubble-application/pom.xml
+++ b/bubble-application/pom.xml
@@ -45,5 +45,8 @@
 			<artifactId>cas-server</artifactId>
 		</dependency> -->
 	</dependencies>
+	<build>
+		<finalName>bubble-application</finalName>
+	</build>
 	<url>https://github.com/bubble-light/bubble/tree/master/bubble-application</url>
 </project>
