--- a/bubble-application/src/main/webapp/WEB-INF/web.xml
+++ b/bubble-application/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,13 @@
 		<session-timeout>20</session-timeout>
 	</session-config>
 
+	<resource-ref>
+		<description>DS_BUBBLE</description>
+		<res-ref-name>BUBBLE_DB</res-ref-name>
+		<res-type>com.mchange.v2.c3p0.ComboPooledDataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.jsp</welcome-file>
