--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<assembly xmlns="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2 http://maven.apache.org/xsd/assembly-1.1.2.xsd">
+<assembly
+	xmlns="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.2 http://maven.apache.org/xsd/assembly-1.1.2.xsd">
 	<id>package</id>
 	<includeBaseDirectory>false</includeBaseDirectory>
 	<formats>
-        <format>tar</format>
-    </formats>
+		<format>tar</format>
+	</formats>
 	<fileSets>
 		<fileSet>
 			<includes>
@@ -21,5 +22,9 @@
 			</includes>
 		</fileSet>
 		<!-- TODO add other Files -->
+		<fileSet>
+			<directory>/bubble-application/src/main/resources/config/prop</directory>
+			<outputDirectory>prop</outputDirectory>
+		</fileSet>
 	</fileSets>
 </assembly>
