增加功能： spring-hadoop 		  spring-task

--- a/bubble-application/src/main/resources/prop/bubble-application.properties
+++ b/bubble-application/src/main/resources/prop/bubble-application.properties
@@ -18,3 +18,11 @@ redis.sentinel.1=
 redis.sentinel.2=
 redis.sentinel.3=
 
+######################Hadoop Configuration########################
+hadoop.defaultFileSystem=hdfs://192.168.50.25:9889
+hadoop.resourceManager=192.168.50.25:8032
+hadoop.jobHistory=192.168.50.25:10020
+
+helloWorldJob.hadoop.job.inputPath=hdfs://192.168.50.25:9889/mapreduce/input/test/file0
+helloWorldJob.hadoop.job.outputPath=hdfs://192.168.50.25:9889/mapreduce/output/test
+
