--- a/bubble-application/pom.xml
+++ b/bubble-application/pom.xml
@@ -44,6 +44,11 @@
 			<groupId>org.jasig.cas</groupId>
 			<artifactId>cas-server</artifactId>
 		</dependency> -->
+
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-hadoop</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>bubble-application</finalName>
