--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 		<mysql.version>5.1.34</mysql.version>
 		<db2jcc.version>1.4.2</db2jcc.version>
 		<mybatis.version>3.2.8</mybatis.version>
-		<java.version>1.6</java.version>
+		<java.version>1.7</java.version>
 		<querydsl.version>3.3.0</querydsl.version>
 		<mybatis-spring.version>1.2.0</mybatis-spring.version>
 		<joda-time.version>2.6</joda-time.version>
@@ -61,13 +61,14 @@
 		<perf4j.version>0.9.16</perf4j.version>
 		<commons-lang.veresion>2.5</commons-lang.veresion>
 		<commons-codec.version>1.9</commons-codec.version>
-		<commons-io.version>1.3.2</commons-io.version>
+		<commons-io.version>2.4</commons-io.version>
 		<person-directory.version>1.6.1</person-directory.version>
 		<org.restlet.version>2.2-M6</org.restlet.version>
 		<commons-collections.version>3.2</commons-collections.version>
 		<jetty-util.version>8.1.11.v20130520</jetty-util.version>
 		<spring-data-redis.version>1.6.2.RELEASE</spring-data-redis.version>
 		<jedis.version>2.8.0</jedis.version>
+		<spring-data-hadoop.version>2.3.0.RELEASE</spring-data-hadoop.version>
 	</properties>
 	<build>
 		<plugins>
@@ -229,6 +230,11 @@
 				<groupId>org.springframework.data</groupId>
 				<artifactId>spring-data-redis</artifactId>
 				<version>${spring-data-redis.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.data</groupId>
+				<artifactId>spring-data-hadoop</artifactId>
+				<version>${spring-data-hadoop.version}</version>
 			</dependency>
 			<!-- springframework extension jar end -->
 
